crates/lexer/src/tests/snapshots/char_bad_ctl.snap
---
source: crates/lexer/src/tests.rs
assertion_line: 25
expression: "(test[1], tokens)"
---
- "'\\c'"
- Err:
    message: "Invalid character control sequence: `\\c`"
    line: 1
    column: 3

