crates/lexer/src/tests/snapshots/char_unterminated.snap
---
source: crates/lexer/src/tests.rs
assertion_line: 25
expression: "(test[1], tokens)"
---
- "'c"
- Err:
    message: "Unterminated character literal. Expecting `'`"
    line: 2
    column: 1

