crates/lexer/src/tests/snapshots/comment_basic.snap
---
source: crates/lexer/src/tests.rs
assertion_line: 150
expression: "(test[1], tokens)"
---
- "\n// line1\nlet foo = 14\nfoo\n"
- Ok:
    - tt: Let
      line: 3
      column: 1
    - tt:
        Ident: foo
      line: 3
      column: 5
    - tt:
        Op: Assign
      line: 3
      column: 9
    - tt:
        Num: "14"
      line: 3
      column: 11
    - tt:
        Semicolon: true
      line: 3
      column: 13
    - tt:
        Ident: foo
      line: 4
      column: 1
    - tt:
        Semicolon: true
      line: 4
      column: 4

